[gd_scene load_steps=3 format=3 uid="uid://c2qgetjc3mfo3"]

[ext_resource type="Script" path="res://addons/dialogic/Modules/Audio/settings_audio.gd" id="1_2iyyr"]
[ext_resource type="PackedScene" uid="uid://dbpkta2tjsqim" path="res://addons/dialogic/Editor/Common/hint_tooltip_icon.tscn" id="2_o1ban"]

[node name="Audio" type="VBoxContainer"]
offset_right = 121.0
offset_bottom = 58.0
script = ExtResource("1_2iyyr")

[node name="TypingSoundsTitle" type="Label" parent="."]
layout_mode = 2
theme_type_variation = &"DialogicSettingsSection"
text = "Typing Sounds"

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer2"]
layout_mode = 2
text = "Audio Bus"

[node name="HintTooltip" parent="HBoxContainer2" instance=ExtResource("2_o1ban")]
layout_mode = 2
texture = null
hint_text = "The default audio bus used by TypeSound nodes."

[node name="TypeSoundBus" type="OptionButton" parent="HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2

[node name="HBoxContainer3" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer3"]
layout_mode = 2
theme_type_variation = &"DialogicSettingsSection"
text = "Audio Channel Defaults"

[node name="HintTooltip" parent="HBoxContainer3" instance=ExtResource("2_o1ban")]
layout_mode = 2
texture = null
hint_text = "Default settings for named audio channels."

[node name="Add" type="Button" parent="HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
text = "Add channel"

[node name="AudioChannelDefaults" type="GridContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
columns = 6

[connection signal="pressed" from="HBoxContainer3/Add" to="." method="_on_add_channel_defaults_pressed"]
